--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-Building Bitcoin
+Building Lendcoin
 
 See doc/readme-qt.md for instructions on building Bitcoin QT,
 the intended-for-end-users, nice-graphical-interface, reference
