--- a/contrib/debian/patches/README
+++ b/contrib/debian/patches/README
@@ -1,3 +1,4 @@
 0xxx: Grabbed from upstream development.
 1xxx: Possibly relevant for upstream adoption.
 2xxx: Only relevant for official Debian release.
+3xxx: CIMS integration release. 
