--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
 Building Lendcoin
-
+//CIMS
 See doc/readme-qt.md for instructions on building Bitcoin QT,
 the intended-for-end-users, nice-graphical-interface, reference
 implementation of Bitcoin.
